--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
+    "html-to-image": "^1.11.13",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
